splash screen for web

--- a/web/index.html
+++ b/web/index.html
@@ -18,21 +18,26 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="A page for memos by Yuunan Kin.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="mymemo_with_flutterfire">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Yuunan Kin's Page">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/ico" href="favicon.ico"/>
 
-  <title>mymemo_with_flutterfire</title>
+  <!-- css -->
+  <link rel="stylesheet" href="splash.css">
+
+  <title>Kin's Page</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <div class="logo">
+    <img src="logo.png" alt="Kin's Page">
+  </div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
