save dns look up time

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,8 @@
 
   <title>Kin's Page</title>
   <link rel="manifest" href="manifest.json">
+  <!-- save dns look up time -->
+  <link rel="preconnect" href="https://identitytoolkit.googleapis.com">
 </head>
 <body>
   <div class="logo">
