--- a/web/index.html
+++ b/web/index.html
@@ -33,8 +33,14 @@
 
   <title>Kin's Page</title>
   <link rel="manifest" href="manifest.json">
+  <!-- preload fonts -->
+  <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Me5WZLCzYlKw.ttf" as="fetch" crossorigin>
   <!-- save dns look up time -->
-  <link rel="preconnect" href="https://identitytoolkit.googleapis.com">
+  <link rel="preconnect" href="https://firestore.googleapis.com/">
+  <link rel="preconnect" href="https://lh3.googleusercontent.com/">
+  <link rel="preconnect" href="https://www.gstatic.com/">
+  <link rel="preconnect" href="https://unpkg.com/">
+  <link rel="preconnect" href="https://identitytoolkit.googleapis.com/">
 </head>
 <body>
   <div class="logo">
